package tarea;

public class VisualMenu {

    public static void principal() {
        System.out
                .println("\n\t1. Ejercicio 1\t\t2. Ejercicio 2\n\t3. Ejercicio 3\t\t4. Ejercicio 4\n\t5. Ejercicio 5");
    }

    public static void ej1() {
        System.out.println("\n\t1. A)\t\t2. B)\n\t3. C)\t\t4. D)\n\t5. E)\t\t6. F)");
    }

    public static void ej2() {
        System.out.println("\n\t1. A)\t\t2. B)\n\t3. C)\t\t4. D)");
    }

    public static void ej3() {
        System.out.println("\n\t1. A)\t\t2. B)");
    }

    public static void ej4() {
        System.out.println("\n\t1. 1)\t\t2. 2)\n\t3. 3)\t\t4. 4)\n\t5. 5)");
    }

    public static void ej5() {
        System.out.println("\n\t4. -\t\t6. +\n\n\t\t0. Exit");
    }

}